--- a/res/xml/gaming_mode_settings.xml
+++ b/res/xml/gaming_mode_settings.xml
@@ -13,25 +13,31 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
 	android:title="@string/gaming_mode_title">
 
-    <com.havoc.support.preferences.SystemSettingSwitchPreference
+    <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
         android:key="gaming_mode_headsup_toggle"
         android:title="@string/gaming_mode_headsup_title"
         android:summary="@string/gaming_mode_headsup_summary"
         android:defaultValue="true" />
 
-    <com.havoc.support.preferences.SystemSettingSwitchPreference
+    <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
         android:key="gaming_mode_hw_keys_toggle"
         android:title="@string/gaming_mode_hardware_keys_title"
         android:summary="@string/gaming_mode_hardware_keys_summary"
         android:defaultValue="false" />
 
-    <com.havoc.support.preferences.SystemSettingSwitchPreference
+    <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
+        android:key="gaming_mode_gestures_toggle"
+        android:title="@string/gaming_mode_gestures_title"
+        android:summary="@string/gaming_mode_gestures_summary"
+        android:defaultValue="false" />
+
+    <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
         android:key="gaming_mode_manual_brightness_toggle"
         android:title="@string/gaming_mode_brightness_title"
         android:summary="@string/gaming_mode_brightness_summary"
         android:defaultValue="true" />
 
-    <com.havoc.support.preferences.SystemSettingListPreference
+    <com.bootleggers.dumpster.preferences.SystemSettingListPreference
         android:key="gaming_mode_ringer_mode"
         android:title="@string/gaming_mode_ringer_title"
         android:entries="@array/gaming_mode_ringer_entries"
@@ -39,7 +45,7 @@
         android:defaultValue="0"
         android:summary="%s" />
 
-    <com.havoc.support.preferences.SystemSettingListPreference
+    <com.bootleggers.dumpster.preferences.SystemSettingListPreference
         android:key="gaming_mode_notifications"
         android:title="@string/gaming_mode_notifications_title"
         android:entries="@array/gaming_mode_notifications_entries"
@@ -47,7 +53,7 @@
         android:defaultValue="3"
         android:summary="%s" />
 
-    <com.havoc.support.preferences.SystemSettingSwitchPreference
+    <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
         android:key="gaming_mode_dynamic_state"
         android:title="@string/gaming_mode_dynamic_title"
         android:summary="@string/gaming_mode_dynamic_summary"
